# meta-watcher

./: .gitignore  CHANGELOG.md  README.md  config.default.json  llms-full.txt  llms.txt  pyproject.toml
.claude/skills/: README.md
.claude/skills/frontend-astro/: SKILL.md
.claude/skills/inference-backends/: SKILL.md
.claude/skills/pipeline-core/: SKILL.md
.claude/skills/web-surface/: SKILL.md
docs/: README.md
docs/architecture/: inference-backends.md  overview.md  recording.md  state-machine.md
docs/guides/: frontend.md  getting-started.md  operator-ui.md  testing.md  troubleshooting.md
docs/internals/: inference.md  pipeline.md  web-state.md
docs/reference/: cli.md  configuration.md  http-api.md  python-api.md
meta_watcher/: __init__.py  app.py  config.py  core.py  inference.py  jpeg.py  overlay.py  pipeline.py  sources.py  storage_browser.py  timestamp.py  upload.py  verify.py
meta_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
meta_watcher/web/: __init__.py  server.py  state.py
meta_watcher/web/static/: index.html
meta_watcher/web/static/_astro/: dashboard.CgrFIkBX.css  dashboard.astro_astro_type_script_index_0_lang.CdsDalh6.js  index.C6yho9wy.css  index.astro_astro_type_script_index_0_lang.7KZG_aQ2.js  settings.astro_astro_type_script_index_0_lang.BiHtZLB3.js
meta_watcher/web/static/dashboard/: index.html
meta_watcher/web/static/settings/: index.html
tests/: test_app.py  test_config_io.py  test_core.py  test_inference.py  test_pipeline.py  test_recordings_api.py  test_recordings_state.py  test_storage_browser.py  test_timestamp.py  test_upload.py  test_verify.py
web/: .gitignore  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
web/src/components/: ControlPanel.astro  SettingsForm.astro  VideoPanel.astro
web/src/pages/: dashboard.astro  index.astro  settings.astro
web/src/scripts/: app.ts  dashboard.ts  settings.ts
web/src/styles/: global.css
