[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-watcher"
version = "0.1.0"
description = "Cross-platform person-first desktop video overlay app powered by SAM 3.1"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26,<2",
  "Pillow>=11.0",
]

[project.optional-dependencies]
desktop = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "opencv-python>=4.10",
  "PyYAML>=6.0",
]
mac = [
  "mlx-vlm>=0.4.3",
]
linux = [
  "sam3 @ git+https://github.com/facebookresearch/sam3.git@main",
  "einops",
  "pycocotools",
  "torch>=2.7",
  "torchvision>=0.22",
]
detr = [
  "transformers>=4.46",
  "torch>=2.7",
  "torchvision>=0.22",
  "timm",
]
dev = [
  "pytest>=8.3",
]
gcp = [
  "google-cloud-storage>=2.18",
]
aws = [
  "boto3>=1.35",
]
oci = [
  "oci>=2.134",
]

[project.scripts]
meta-watcher = "meta_watcher.app:main"

[tool.setuptools.packages.find]
include = ["meta_watcher*"]

[tool.setuptools.package-data]
"meta_watcher.web" = ["static/**/*"]
